project data generator updated

--- a/notebooks/generate _data/project.ipynb
+++ b/notebooks/generate _data/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 28.71}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 31.189999999999998}]\n"
+      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 25.910000000000004}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 35.19}]\n[25.91, 35.19, 26.68, 45.56, 37.56, 44.62, 44.86, 31.04, 30.53, 39.94, 52.25, 37.28, 30.42, 38.61, 29.7, 43.12, 41.37, 41.21, 32.49, 38.99, 49.49, 38.94, 56.45, 32.33, 44.79, 47.46, 34.17, 36.9, 46.31, 27.42, 33.75, 29.72, 24.73, 18.78, 60.01, 56.87, 39.06, 36.63, 34.18, 48.52, 26.98, 29.08, 31.21, 35.13, 41.43, 43.11, 21.91, 42.95, 34.1, 39.7, 46.61, 27.89, 27.99, 30.42, 41.96, 46.63, 40.61, 50.07, 48.19, 41.88, 35.31, 49.41, 41.38, 29.28, 33.2, 38.3, 32.66, 44.26, 37.92, 35.64, 57.57, 46.89, 34.73, 44.1, 36.02, 35.12, 40.95, 46.68, 51.67, 33.95, 21.25, 23.63, 35.27, 51.76, 30.94, 51.67, 40.32, 43.0, 37.11, 42.43, 36.25, 31.44, 39.52, 55.54, 35.09, 28.52, 36.84, 44.88, 27.08, 37.15]\n"
      ]
     }
    ],
@@ -47,35 +47,44 @@
     "# bias salary by age and by gender\n",
     "employee_list = []\n",
     "employee_pay = []\n",
+    "employee_gender_lst = []\n",
+    "employee_age_lst = []\n",
     "for key,employee in enumerate(employees):\n",
     "    employee_list.append(employee['name'])\n",
+    "    employee_gender_lst.append(employee['gender'].lower())\n",
     "    if employee['hourly_rate'] < 0:\n",
     "        employee['hourly_rate'] = 20\n",
     "    if employee['gender'].lower() == 'female':\n",
     "        employee['hourly_rate'] *= random.choice([1.3, 1.6, 1.4, 1.1])\n",
-    "    dt = datetime.strptime(employee['dob'],DATEFORMAT)\n",
-    "    employee['dob'] = datetime(dt.year,dt.month,dt.day,0,0,0)\n",
+    "    dob = datetime.strptime(employee['dob'],DATEFORMAT)\n",
+    "    employee['dob'] = datetime(dob.year,dob.month,dob.day,0,0,0)\n",
+    "    age = int(round((datetime.today() - dob).days / 365,0))\n",
+    "    employee_age_lst.append(age)\n",
     "    employee['hourly_rate'] += round((datetime.today() - employee['dob']).days/900,2)\n",
-    "    employee_pay.append(employee['hourly_rate'])\n",
+    "    employee_pay.append(round(employee['hourly_rate'],2))\n",
     "print(employees[0:2])\n",
     "employee_pay_dct = dict(zip(employee_list,employee_pay))\n",
+    "employee_gender_dct = dict(zip(employee_list,employee_gender_lst))\n",
+    "employee_age_dct = dict(zip(employee_list,employee_age_lst))\n",
+    "print(employee_pay)\n",
     "#collection.insert_many(employees)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f46b76b9cc8>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'enddate_actual'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-976d840d52c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0mdct_tasks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'start'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstart\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimedelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhours\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrvs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtask_len\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mdct\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'enddate_actual'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m             \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdct\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'enddate_actual'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0mdct_tasks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'end'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'enddate_actual'"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -98,9 +107,16 @@
     "tasks_list = []\n",
     "project_lists = []\n",
     "composite_lst = []\n",
-    "for idx in range(1,3000):\n",
+    "for idx in range(1,5000):\n",
     "    dct = {}\n",
     "    composite={}\n",
+    "    # determine project manager\n",
+    "    manager = random.choice(employee_list)\n",
+    "    manager_gender = employee_gender_dct[manager].lower()\n",
+    "    manager_age = employee_age_dct[manager]\n",
+    "    dct['manager'] = manager\n",
+    "    dct['manager_gender'] = manager_gender\n",
+    "    dct['manager_age'] = manager_age\n",
     "    # generate project type\n",
     "    name = 'Project '+str(idx)\n",
     "    dct['name'] = name\n",
@@ -113,6 +129,8 @@
     "    \n",
     "    dct['startdate_proposed'] = sp\n",
     "    proj_len = int(gamma.rvs(a=60, size=1))\n",
+    "    if proj_len < 0:\n",
+    "        proj_len *= -1\n",
     "    ep = sp + timedelta(days=proj_len)\n",
     "    dct['enddate_proposed'] = ep\n",
     "    \n",
@@ -121,7 +139,10 @@
     "        s = 'open'\n",
     "    dct['status'] = s\n",
     "\n",
-    "    delay = int(gamma.rvs(a=0.5, size=1))\n",
+    "    delay = int(gamma.rvs(a=3, size=1))\n",
+    "    if manager_gender == 'female':\n",
+    "            delay *= .7\n",
+    "    delay = delay * (65 - manager_age)*.02 # older is better\n",
     "    if delay < 0:\n",
     "        delay = 0\n",
     "    sa = sp + timedelta(days=delay)\n",
@@ -130,7 +151,17 @@
     "    if s == 'closed':\n",
     "        delay = int(gamma.rvs(a=10, size=1))\n",
     "        delay *= random.choice([-1,1,1])\n",
-    "        dct['enddate_actual'] = ep + timedelta(days=delay) \n",
+    "        if manager_gender == 'female':\n",
+    "            delay *= .4\n",
+    "        if delay < 0:\n",
+    "            delay = delay * manager_age*1.4 # older is better\n",
+    "        else:\n",
+    "            delay = delay * (65-manager_age)*.03 # older is better\n",
+    "        \n",
+    "        if delay < 0:\n",
+    "            delay *= -1\n",
+    "        dct['enddate_actual'] = ep + timedelta(days=delay)\n",
+    "\n",
     "    else:\n",
     "        dct['enddate_actual'] = datetime(2020,1,1,0,0,0)\n",
     "    \n",
@@ -154,6 +185,9 @@
     "        duration = (dct_tasks['end'] - dct_tasks['start']).days*8\n",
     "        composite = {\n",
     "            'project':name,\n",
+    "            'manager':manager,\n",
+    "            'manager_gender':manager_gender,\n",
+    "            'manager_age':manager_age,\n",
     "            'type':dct['type'],\n",
     "            'status':dct['status'],\n",
     "            'startdate_proposed':dct['startdate_proposed'],\n",
@@ -161,10 +195,11 @@
     "            'enddate_proposed':dct['enddate_proposed'],\n",
     "            'enddate_actual':dct['enddate_actual'],\n",
     "            'employee':dct_tasks['employee'],\n",
+    "            'gender': employee_gender_dct[dct_tasks['employee']].lower(),\n",
     "            'start':dct_tasks['start'],\n",
     "            'end':dct_tasks['end'],\n",
     "            'task_duration':round(duration,2),\n",
-    "            'remuneration':round(employee_pay_dct[dct_tasks['employee']]*duration,2),\n",
+    "            'remuneration':round(employee_pay_dct[dct_tasks['employee']]*abs(duration),2),\n",
     "            # find the delay\n",
     "            'delay_start': (dct['startdate_actual'] - dct['startdate_proposed']).days*8,\n",
     "            'delay_end':(dct['enddate_actual'] - dct['enddate_proposed']).days*8,\n",
